--- a/docs/Developers Manual/parts/requirements.tex
+++ b/docs/Developers Manual/parts/requirements.tex
@@ -1,11 +1,28 @@
 % I'm not totally sure, if this should be described together or seperate, but somehow or SCRUM approach and the Redmine
 % stuff should be mentioned somewhere before the developing part and as this are probably only three pages or somethin
 % it probably could be integrated here
-\chapter{Project Management and System Requirements}\label{chap:systemRequirements}
+\chapter{Project Workflow and  Requirements}\label{chap:systemRequirements}
 
-\section{Project Workflow}\label{sec:workflow}
+First of all, we've got a confession to make: Unplagged is like a big playground of new 
+workflows and technologies for us, as we are aiming to incorporate 
+\enquote{best-practices} wherever possible, or at least what we currently consider to be best-practices. 
 
-To make it possible to work efficiently together in our distributed environment, the team uses 
+We believe this approach is necessary, because of the 
+fact, that we are essentially trying to incubate this as a real open source project and this will 
+only work if
+it is well crafted and if cutting-edge workflows and technologies are used. Nearly all of the team members
+are also working in some kind of web related side job, so we all got enough experiences with the problems that can 
+occur during the maintenance of badly designed software.
+
+Most of the times this works pretty well, but sometimes we are still trying to figure out how to 
+get everyone up to speed with every part of the system or how to divide the responsibilites carefully.
+
+To start this project, we opted to use \textit{Scrum} as our agile development approach. If you are familiar with this
+methodology, you may notice, that there could be a few problems when considering, that the team is working mostly distributed
+without a common office and with very different time tables for each of the members.
+
+
+To make it possible to work efficiently together in this kind of environment, 
 \href{http://www.redmine.org/}{Redmine} as it's project management tool, which you can access under:
 
 \begin{itemize}
