shorting some ultra-long sentences in the preface

--- a/docs/Developers Manual/parts/preface.tex
+++ b/docs/Developers Manual/parts/preface.tex
@@ -1,8 +1,7 @@
-﻿\chapter*{Introduction}
+\chapter*{Introduction}
 
-Even though the big media coverage and interest in plagiarism in Germany has very much subsided 
-after Minister Guttenberg had to resign, because of the plagiarisms found in his doctoral thesis\citep{Google2012}, 
-the initial idea for the 
+The big media coverage and interest in plagiarism in Germany has very much subsided 
+after Minister Guttenberg had to resign, because of the plagiarisms found in his doctoral thesis\citep{Google2012}. However, the initial idea for the 
 creation of the \enquote{Unplagged} project, whose development approach will be described here, can be found in this 
 very case of plagiarism. Related to it were the formation of the
 \href{http://de.guttenplag.wikia.com/wiki/GuttenPlag\_Wiki}{GuttenPlag} and it's descendent 
@@ -10,14 +9,11 @@ very case of plagiarism. Related to it were the formation of the
 discovering and collecting plagiarism in their respective cases and are kind of the role models for the way the
 Unplagged system is developed.
 
-The initial project idea and context were provided by our professor Dr. Debora Weber-Wulff and the two term master project
-every media informatics student at the \href{http://htw-berlin.de/}{HTW-Berlin} has to take. As professor Weber-Wulff is 
-a well known expert in Germany on the
-topic of plagiarism,
-does research in this field for over ten years\citep{Spiegel-Online2011} and is actively involved in the VroniPlag
-community, she came up with the idea to build a dedicated system --- a \enquote{Plagiarism Detection Cockpit}\citep{Weber-Wulff2011} --- 
-that is modeled after the experiences that were made
-with the workflow used in VroniPlag and GuttenPlag.
+The initial project idea and context were provided by our professor Dr. Debora Weber-Wulff and the two-term master project,
+every media informatics student at the \href{http://htw-berlin.de/}{HTW-Berlin} has to take. Professor Weber-Wulff is 
+a well known expert in Germany under her synonym 'WiseWoman" on the topic of plagiarism. She has done research in this field for over ten years\citep{Spiegel-Online2011} and is actively involved in the VroniPlag
+community. She came up with the idea to build a dedicated system --- a \enquote{Plagiarism Detection Cockpit}\citep{Weber-Wulff2011} --- 
+that is modeled after the experiences that were made with the workflow used in VroniPlag and GuttenPlag.
 
 So, to put it in a catchy marketing phrase, here is what Unplagged aims to become: 
 
@@ -45,7 +41,7 @@ text than a bachelors
 thesis and therefore the experience we got with actual scientific writing was very limited and very specific to the 
 field of computer science. We understand the ethical problems, that come with the betrayal of 
 good scientific practice of plagiators, but we simply can not relate easily to the amount of work that has to be put into 
-a Ph D., or be as 
+a PhD., or be as 
 passionate about plagiarism as Prof. Weber-Wulff always is, because we never experienced it ourselves.
 
 That is why we had a lot of catching up to do on the most important history behind VroniPlag, the different types
