--- a/docs/Developers Manual/Developers-Manual.tex
+++ b/docs/Developers Manual/Developers-Manual.tex
@@ -7,6 +7,7 @@
 \usepackage{fixltx2e}
 
 \usepackage[nonamebreak]{natbib}
+
 % used colors see http://en.wikibooks.org/wiki/LaTeX/Colors for more
 \usepackage[usenames,dvipsnames]{xcolor}
 
@@ -78,7 +79,7 @@
 
 \include{parts/title}
 
-% arabic page numbering should start after the toc, so we start with roman, but after the title
+% arabic page numbering should start after introduction so we start with roman, but after the title
 \pagenumbering{Roman}
 
 % group with custom link color to make sure not every item in the toc is weirdly colored
