--- a/docs/Developers Manual/parts/developing-unplagged.tex
+++ b/docs/Developers Manual/parts/developing-unplagged.tex
@@ -413,20 +413,16 @@ actual preview environment, that can be deployed to a known stable state/commit 
 
 This chapter will explain the progress and development of the user interface of our project. As we tried to follow the typical project workflow, we first drew a lot of mockups in the beginning, which represented the main features of unplagged. At first the wireframes, or also called mockups were drawn by hand, before we digitalized them. As an example the mockups of the 'new case' page are shown below. All the other mockups can be found in the appendix.
 
-\begin{figure}[!h]
+\begin{figure}[htbp]
   \centering
-  \fbox{
     \includegraphics[width=0.97\textwidth]{mockups/m_new_case.jpg}
-  }
   \caption{Mockup – New case – hand-drawn}
   \label{fig:mNewCaseMockup}
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[htbp]
   \centering
-  \fbox{
     \includegraphics[bb = 30 400 450 750,clip]{mockups/1_new_case.png}
-  }
   \caption{Mockup – New case – digitalized}
   \label{fig:1newCaseMockup}
 \end{figure}
@@ -434,28 +430,25 @@ This chapter will explain the progress and development of the user interface of 
 
 After we had a basic idea how the main interface should be structured, we created a first screen in Photoshop. Therefore we got several helpful suggestions from the website PremiumPixels: \url{http://www.premiumpixels.com/}.
 
-\begin{figure}[!h]
+\begin{figure}[htbp]
   \centering
-  \fbox{
     \includegraphics[width=0.97\textwidth]{images/init-psd.png}
-  }
   \caption{Initial Screen PSD}
   \label{fig:initialScreenPsd}
 \end{figure}
-
-~
 
 The next step, before the HTML template got created, we defined the key features, our user interface should take care of:
 \begin{itemize}
 \item Reponsive Layout – optimized layouts for different devices
 \item Cross-Browser-Compatibility
 \item Light-weight and w3c-conform XML Markup
-\item CSS3 – CSS instead of images
+\item Progressive enhcancement with CSS3 – CSS instead of images where possible
 \end{itemize}
 
 \subsection{Responsive Layout using CSS3 Media Queries}
 Since the worldwide amount of smartphones and templates is growing very fast, website developers should optimize for these devices as well. And so do we. Some functionality as uploading a file, doesn't work on iOS at all, but at least all functions that are working on mobile devices, should work. So the goal is creating a user interface that uses the same markup, but displays is differently on different devices. Therefore CSS media queries can be used, these are basically conditions that execute a part of CSS only if the condition is true. The most prominent conditions are the following:
 
+\begingroup 
 \begin{lstlisting}[caption=CSS Media Queries, label=list:cssMediaQueries, language=Ruby]
 max-width: 600px  # max browser width 600px
 min-width: 300px  # min browser width 300px
@@ -463,6 +456,7 @@ orientation:landscape # current orientation landscape mode
 orientation:portrait # current orientation portrait mode
 -webkit-min-device-pixel-ratio: 2 # min pixel ration (iPhone 4, Retina)
 \end{lstlisting}
+\endgroup
 
 These media queries can be combined in any order to display an optimized page for each device. Since only the CSS changes, the HTML does not have to be touched. An example query looks like this: 
 
