--- a/docs/Developers Manual/parts/preface.tex
+++ b/docs/Developers Manual/parts/preface.tex
@@ -1,7 +1,7 @@
 ﻿\chapter*{Introduction}
 
 Even though the big media coverage and interest in plagiarism in Germany has very much subsided 
-after Minister Guttenberg had to resign, because of the plagiarisms found in his doctoral thesis\citep{Google2012}, 
+after Minister Guttenberg had to resign, because of the plagiarisms found in his doctoral thesis\citep[page 12]{Google2012}, 
 the initial idea for the 
 creation of the \enquote{Unplagged} project, whose development approach will be described here, can be found in this 
 very case of plagiarism. Related to it were the formation of the
@@ -14,8 +14,8 @@ The initial project idea and context were provided by our professor Dr. Debora W
 every media informatics student at the \href{http://htw-berlin.de/}{HTW-Berlin} has to take. As professor Weber-Wulff is 
 a well known expert in Germany on the
 topic of plagiarism,
-does research in this field for over ten years\citep{Spiegel-Online2011} and is actively involved in the VroniPlag
-community, she came up with the idea to build a dedicated system --- a \enquote{Plagiarism Detection Cockpit}\citep{Weber-Wulff2011} --- 
+does research in this field for over ten years and is actively involved in the VroniPlag
+community\citep{Spiegel-Online2011}, she came up with the idea to build a dedicated system --- a \enquote{Plagiarism Detection Cockpit}\citep{Weber-Wulff2011} --- 
 that is modeled after the experiences that were made
 with the workflow used in VroniPlag and GuttenPlag.
 
