re-positioning mockup

--- a/docs/Developers Manual/parts/developing-unplagged.tex
+++ b/docs/Developers Manual/parts/developing-unplagged.tex
@@ -422,7 +422,7 @@ This chapter will explain the progress and development of the user interface of 
 
 \begin{figure}[htbp]
   \centering
-    \includegraphics[bb = 0 150 410 560,clip]{mockups/1_new_case.png}
+    \includegraphics[width=0.97\textwidth , bb = 0 250 490 560,clip]{mockups/1_new_case.png}
   \caption{Mockup – New case – digitalized}
   \label{fig:1newCaseMockup}
 \end{figure}
