Added Introduction to TOC

--- a/docs/Developers Manual/Developers-Manual.tex
+++ b/docs/Developers Manual/Developers-Manual.tex
@@ -24,6 +24,8 @@
 \usepackage{graphicx}
 \usepackage{nameref} % gets the name of a chapter when refering to the label with \nameref{chapterName}
 
+%\usepackage{minutes}
+
 % package and styles for code listings
 \usepackage{listings}
 \usepackage{courier}
@@ -43,7 +45,7 @@
          showspaces=false,           % Leerzeichen anzeigen ?
          showtabs=false,             % Tabs anzeigen ?
          xleftmargin=24pt,
-        xrightmargin=19pt,
+         xrightmargin=19pt,
          framextopmargin=5pt,
          framexleftmargin=10pt,
          framexrightmargin=10pt,
