--- a/docs/Developers Manual/parts/preface.tex
+++ b/docs/Developers Manual/parts/preface.tex
@@ -1,5 +1,6 @@
 \chapter*{Introduction}
-%I didn't like, that the first to paragraphs started with "the" so I changed this again
+\addcontentsline{toc}{chapter}{Introduction}
+%I didn't like, that the first two paragraphs started with "the" so I changed this again
 After Minister Guttenberg had to resign, because of the plagiarisms found in his doctoral thesis,
 the big media coverage and interest in plagiarism in Germany has very much subsided 
 \citep{Google2012}. However, the initial idea for the 
@@ -39,6 +40,7 @@ This present document will be the handbook that gets you started if you are inte
 open source project, which is licensed under the \href{http://www.gnu.org/licenses/quick-guide-gplv3}{GNU GPLv3}.
 
 \section*{Chapter Overview}
+\addcontentsline{toc}{section}{Chapter Overview}
 
 One of the biggest problems we faced at the start was, that none of the team members had written a longer scientific
 text than a bachelors
@@ -54,7 +56,7 @@ help finding plagiarism. Chapter \ref{chap:plagOverview}, \nameref{chap:plagOver
 give a brief overview of the most important topics to get you up to speed with the domain of the software, if you are
 not already familiar with it.
 
-Chapter \ref{chap:systemRequirements} will be the place, where the development process is described and a collection and description 
+Chapter \ref{chap:systemRequirements}, \nameref{chap:systemRequirements}, will be the place, where the development process is described and a collection and description 
 of the parts of the system, that already exist or that we identified as 
 necessary parts of Unplagged will be given. As the system is developed with an agile project management style, this will be done
 primarily based on the user stories.
@@ -66,6 +68,7 @@ steps and all necessary tools for you as a developer.
 %And if this still isn't enough reading material for you, the appendices show you..
 
 \section*{Conventions}
+\addcontentsline{toc}{section}{Conventions}
 
 To markup important words in the text, the following typgraphical conventions are used:
 
