--- a/docs/Developers Manual/parts/requirements.tex
+++ b/docs/Developers Manual/parts/requirements.tex
@@ -17,11 +17,13 @@ occur during the maintenance of badly designed software.
 Most of the times this works pretty well, but sometimes we are still trying to figure out how to 
 get everyone up to speed with every technology and part of the system or how to divide the responsibilites carefully.
 
-To start this project, we opted to use \textit{Scrum}%\footnote{A good scrum resource..} 
+To start this project, we opted to use \textit{Scrum} %\footnote{More information can be found at} 
 as our agile development approach. If you are familiar with this
 methodology, you may notice, that there could be a few problems when considering, that the team is working mostly 
 distributed
 without a common office and with very different time tables for each of the members.
+
+We struggled a bit to the tweak the workflow that is required by Scrum in 
 
 \section{The Workflow}
 
