removing css syntax highlighting

--- a/docs/Developers Manual/parts/developing-unplagged.tex
+++ b/docs/Developers Manual/parts/developing-unplagged.tex
@@ -449,7 +449,7 @@ The next step, before the HTML template got created, we defined the key features
 Since the worldwide amount of smartphones and templates is growing very fast, website developers should optimize for these devices as well. And so do we. Some functionality as uploading a file, doesn't work on iOS at all, but at least all functions that are working on mobile devices, should work. So the goal is creating a user interface that uses the same markup, but displays is differently on different devices. Therefore CSS media queries can be used, these are basically conditions that execute a part of CSS only if the condition is true. The most prominent conditions are the following:
 
 \begingroup 
-\begin{lstlisting}[caption=CSS Media Queries, label=list:cssMediaQueries, language=CSS]
+\begin{lstlisting}[caption=CSS Media Queries, label=list:cssMediaQueries, language=Ruby]
 max-width: 600px  # max browser width 600px
 min-width: 300px  # min browser width 300px
 orientation:landscape # current orientation landscape mode
