Prepared time logging table environments

--- a/docs/Developers Manual/Developers-Manual.tex
+++ b/docs/Developers Manual/Developers-Manual.tex
@@ -21,6 +21,11 @@
 \hypersetup{colorlinks, linkcolor={Blue}, citecolor={Blue}, urlcolor={Blue}}
 \urlstyle{same}
 
+\usepackage{longtable}
+\usepackage{datatool} % to include table data from .csv
+\usepackage{lscape} % to turn the tables
+
+
 \usepackage{graphicx}
 \usepackage{nameref} % gets the name of a chapter when refering to the label with \nameref{chapterName}
 
