--- a/docs/Developers Manual/parts/developing-unplagged.tex
+++ b/docs/Developers Manual/parts/developing-unplagged.tex
@@ -416,14 +416,14 @@ This chapter will explain the progress and development of the user interface of 
 \begin{figure}[htbp]
   \centering
     \includegraphics[width=0.97\textwidth]{mockups/m_new_case.jpg}
-  \caption{Mockup – New case – hand-drawn}
+  \caption{Mockup -- New case -- hand-drawn}
   \label{fig:mNewCaseMockup}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
     \includegraphics[width=0.97\textwidth , bb = 0 250 490 560,clip]{mockups/1_new_case.png}
-  \caption{Mockup – New case – digitalized}
+  \caption{Mockup -- New case -- digitalized}
   \label{fig:1newCaseMockup}
 \end{figure}
 
