--- a/docs/Developers Manual/parts/preface.tex
+++ b/docs/Developers Manual/parts/preface.tex
@@ -59,18 +59,18 @@ not already familiar with it.
 Chapter \ref{chap:systemRequirements}, \nameref{chap:systemRequirements}, will be the place, where the development process is described and a collection and description 
 of the parts of the system, that already exist or that we identified as 
 necessary parts of Unplagged will be given. As the system is developed with an agile project management style, this will be done
-primarily based on the user stories.
+primarily based on the product backlog.
 
 If you know all those things already and simply want to get started working and coding, you should probably jump
-to \nameref{chap:developingUnplagged}. This chapter will give the technical insights into the system, the basic installation
+to \ref{chap:developingUnplagged}, \nameref{chap:developingUnplagged}. This chapter will give the technical insights into the system, the basic installation
 steps and all necessary tools for you as a developer.
 
-%And if this still isn't enough reading material for you, the appendices show you..
+And if this still isn't enough reading material for you, the appendices show you..
 
 \section*{Conventions}
 \addcontentsline{toc}{section}{Conventions}
 
-To markup important words in the text, the following typgraphical conventions are used:
+To markup important words in the text, the following typographical conventions are used:
 
 \begin{description}
 \item \textit{Italic} \hfill \\
