--- a/docs/Developers Manual/parts/requirements.tex
+++ b/docs/Developers Manual/parts/requirements.tex
@@ -66,8 +66,6 @@ that was spent on an issue within redmine.
 
 % Redmine description, Meetings, Debbie, Scrum Cards, Server, Website
 
-
-
 \subsection{Product Owner --- \enquote{The Debbie Meetings}}
 
 
@@ -79,12 +77,13 @@ that was spent on an issue within redmine.
 \end{figure}
 
 To figure out the user stories we mostly rely on what we internally call \enquote{Debbie Meetings}.
-Normally every two weeks, the members of the team meet with Prof. Weber-Wulff, who we state to be our \textit{Product
-Owner}.
+Normally at the end of every sprint, the members of the team meet with Prof. Weber-Wulff, who we state to be our \textit{Product
+Owner}. We simply sit down there and talk about what should be implemented in the next sprint and collect it on cards as
+you can see in figure \ref{fig:userStories}.
 
-If we have a prototype that we consider to have enough business value to be shown to more people, the focus will 
-probably shift away to a more broader understanding of the product owner, because there are some more sources from
-which feedback on the system can be gathered.
+We consider this to be just a temporary way of handling this, because we hope that when we eventually have a prototype 
+that we consider to have enough \enquote{business value} to be shown to more people, the focus will shift away from 
+Prof. Weber-Wulff to a more broader understanding of the product owner. 
 
 \begin{figure}[!h]
   \centering
@@ -93,9 +92,17 @@ which feedback on the system can be gathered.
   \label{fig:userStories}
 \end{figure}
 
+This means, that we want to open up our ticket system to directly collect new user stories and gather feedback for 
+example from the VroniPlag group, which can be reached through their IRC channel \texttt{\#VroniPlag} on:
+
+\begin{itemize}
+\item \url{http://webchat.freenode.net/}
+\end{itemize} 
+
+
 \subsection{Team Meetings}
 
-The Unplagged version of the \textit{Daily Scrum} is currently a weekly meeting
+The Unplagged version of the \textit{Daily Scrum} is currently a weekly meeting.
 
 
 \section{Target Group}
