TeXing Tiens part

--- a/docs/Developers Manual/biblio.bib
+++ b/docs/Developers Manual/biblio.bib
@@ -75,3 +75,29 @@
   note = {[Online; accessed 08.03.12]},
   owner = {Dominik}
 }
+
+@MISC{UEfAP,
+  author = {UEfAP},
+  title = {Avoiding plagiarism},
+  howpublished = {\url{http://www.uefap.com/writing/plagiar/plagiar.htm}},
+  year = {2012},
+  note = {[Online; accessed 16.03.12]},
+  owner = {Tien}
+}
+
+@misc{ wiki:Citation,
+   author = "Wikipedia",
+   title = "Citation (disambiguation) --- Wikipedia{,} The Free Encyclopedia",
+   year = "2011",
+   url = "http://en.wikipedia.org/w/index.php?title=Citation_(disambiguation)&oldid=432313019",
+   note = "[Online; accessed 20-March-2012]"
+ }
+ 
+ @misc{ Wiredprof2010,
+   author = "Wiredprof",
+   title = "Plagiarism, Paraphrasing, And Scholarly Integrity",
+   year = "2010",
+   url = "http://www.wiredprof.com/100/lectures/Plagiarism.htm",
+   note = "[Online; accessed 20-March-2012]"
+ }
+ 
