--- a/docs/Developers Manual/parts/preface.tex
+++ b/docs/Developers Manual/parts/preface.tex
@@ -65,7 +65,7 @@ If you know all those things already and simply want to get started working and 
 to \ref{chap:developingUnplagged}, \nameref{chap:developingUnplagged}. This chapter will give the technical insights into the system, the basic installation
 steps and all necessary tools for you as a developer.
 
-And if this still isn't enough reading material for you, the appendices show you..
+%And if this still isn't enough reading material for you, the appendices show you..
 
 \section*{Conventions}
 \addcontentsline{toc}{section}{Conventions}
